--- a/test.html
+++ b/test.html
@@ -2,11 +2,28 @@
 <html>
 
 <head>
-  <script src='test.js'></script>
+  <!-- Imports jquery, moment, and Chart from repo: https://cdnjs.com -->
+  <!-- Note: order of imports matters! -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+
+  <!-- Imports d3 module to read csv data -->
+  <script src="https://d3js.org/d3.v6.min.js"></script>
+
+  <link rel="stylesheet" href="dashboard.css" />
 </head>
 
 <body>
-  <div class="graph"></div>
+  <div class="chart-container">
+    <canvas id="chart30"></canvas>
+  </div>
+  <div class="chart-container">
+    <canvas id="chart60"></canvas>
+  </div>
 </body>
-  
+
+<!-- Imports chart data -->
+<script src='test.js'></script>
+
 </html>
