Working chart that switches between views!

--- a/test.html
+++ b/test.html
@@ -15,11 +15,14 @@
 </head>
 
 <body>
+  <button id="month" type="button" >Overall (Monthly)</button>
+  <button id="all-time" type="button" >Overall (Cumulative)</button>
+
   <div class="chart-container">
-    <canvas id="chart30"></canvas>
+    <canvas id="chart-month" style="visibility: visible;"></canvas>
   </div>
   <div class="chart-container">
-    <canvas id="chart60"></canvas>
+    <canvas id="chart-all-time" style="visibility: hidden;"></canvas>
   </div>
 </body>
 
