Cleaning up and adding documentation

--- a/dashboard.html
+++ b/dashboard.html
@@ -15,12 +15,8 @@
   <button id='month' type='button' >Overall (Monthly)</button>
   <button id='all-time' type='button' >Overall (Cumulative)</button>
 
-  
-  <div class='chart-container' id='chart-container-month'>
-    <canvas id='chart-month' style='visibility: visible;'></canvas>
-  </div>
-  <div class='chart-container' id='chart-container-all-time'>
-    <canvas id='chart-all-time' style='visibility: hidden;'></canvas>
+  <div id='chart-container'>
+    <canvas id='cases-chart'></canvas>
   </div>
 </body>
 
