Started work on general datastream

--- a/dashboard.html
+++ b/dashboard.html
@@ -21,6 +21,6 @@
 </body>
 
 <!-- Imports chart data -->
-<script src='dashboard.js'></script>
+<script src='scripts/dashboard_charts.js'></script>
 
 </html>
