updating id names

--- a/dashboard.html
+++ b/dashboard.html
@@ -15,8 +15,8 @@
   <button id='month' type='button' >Overall (Monthly)</button>
   <button id='all-time' type='button' >Overall (Cumulative)</button>
 
-  <div id='chart-container'>
-    <canvas id='cases-chart'></canvas>
+  <div id='data-chart-container'>
+    <canvas id='covid-cases-chart'></canvas>
   </div>
 </body>
 
